media-services.jellyfin.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
  - name: http-jellyfin
    protocol: TCP
    port: 80
    targetPort: 8096
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      labels:
        app: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: linuxserver/jellyfin:latest
        ports:
        - name: jellyfin
          containerPort: 8096
        volumeMounts:
          - name: "media-hdd"
            mountPath: "/config"
            subPath: "configs/jellyfin"
          - name: "media-hdd"
            mountPath: "/data"
            subPath: "library"
      volumes:
        - name: "media-hdd"
          persistentVolumeClaim:
            claimName: "media-hdd"
